--- a/Unicode/Readme
+++ b/Unicode/Readme
@@ -1,7 +1,11 @@
-成因塊
+成因塊时间雕刻
 
 成 completed, finished, fixed
 因 cause, reason; by; because (of)
 塊 piece, lump; dollar
+时 time, season; era, age, period
+间 midpoint, space; place, locality
+雕 engrave, inlay, carve; exhaust;
+刻 carve, engrave; quarter hour
 
-(( Chéngyīn kuài ))
+(( Chéngyīn kuài Shíjiān diāokè ))
